WebAccess class for HTML download, Kraken and Yahoo